# server/controllers/index.js
@@ -2,10 +2,12 @@ import users from './users';
 import contents from './contents';
 import auth from './auth';
 import images from './images';
+import subscriptions from './subscriptions';
 
 export {
   users,
   contents,
   auth,
   images,
+  subscriptions,
 };
