# server/routes/index.js
@@ -3,6 +3,7 @@ import users from './users';
 import contents from './contents';
 import auth from './auth';
 import images from './images';
+import subscriptions from './subscriptions';
 
 const router = Router();
 
@@ -10,5 +11,6 @@ router.use('/users', users);
 router.use('/contents', contents);
 router.use('/auth', auth);
 router.use('/images', images);
+router.use('/subscriptions', subscriptions);
 
 export default router;
